err/spark.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spark'...
Listing './lib/python3.5/site-packages/spark/contribs'...
Compiling './lib/python3.5/site-packages/spark/contribs/ez_setup.py'...
***   File "./lib/python3.5/site-packages/spark/contribs/ez_setup.py", line 82
    except pkg_resources.VersionConflict, e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spark/contribs/progress.py'...
***   File "./lib/python3.5/site-packages/spark/contribs/progress.py", line 275
    if type(number) == type(1) or type(number) == type(1L):
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spark/proj'...
Listing './lib/python3.5/site-packages/spark/proj/controllers'...
Listing './lib/python3.5/site-packages/spark/proj/etc'...
Listing './lib/python3.5/site-packages/spark/proj/files'...
Compiling './lib/python3.5/site-packages/spark/proj/files/create_admin.py'...
***   File "./lib/python3.5/site-packages/spark/proj/files/create_admin.py", line 20
    print "Username too short!"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spark/proj/scripts'...
Compiling './lib/python3.5/site-packages/spark/proj/scripts/server.py'...
***   File "./lib/python3.5/site-packages/spark/proj/scripts/server.py", line 165
    except SystemExit, sts:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spark/proj/scripts/server2.py'...
***   File "./lib/python3.5/site-packages/spark/proj/scripts/server2.py", line 43
    print "script missing"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spark/proj/scripts/twistedctl.py'...
***   File "./lib/python3.5/site-packages/spark/proj/scripts/twistedctl.py", line 18
    print 'Error:', msg
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spark/spark_admin.py'...
***   File "./lib/python3.5/site-packages/spark/spark_admin.py", line 49
    os.chmod(join(proj_dir,'etc','cgiserver.py'),0755)
                                                    ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/spark/sprite.py'...
***   File "./lib/python3.5/site-packages/spark/sprite.py", line 113
    os.chmod(self.cache_file, 0644)
                                 ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/spark/storm_test.py'...
***   File "./lib/python3.5/site-packages/spark/storm_test.py", line 86
    print "%s %s said:" % (o3.firstname,o3.lastname)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spark/storm_testmysql.py'...
***   File "./lib/python3.5/site-packages/spark/storm_testmysql.py", line 86
    print "%s %s said:" % (o3.firstname,o3.lastname)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spark/storm_testsqlite.py'...
***   File "./lib/python3.5/site-packages/spark/storm_testsqlite.py", line 83
    print "%s %s said:" % (o3.firstname,o3.lastname)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spark-0.2.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
